# tidalwave

./: README.md  index.yaml
.github/workflows/: backend.yml  frontend.yml  helm.yml
backend/: Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: a1d2e3f40510_track_durations.py  c01b5b802766_baseline_schema.py
backend/src/tidalwave/: cli.py  config.py  db.py  deps.py  main.py
backend/src/tidalwave/auth/: registration.py  service.py  session.py
backend/src/tidalwave/ingest/: durations.py  poller.py  repository.py  service.py
backend/src/tidalwave/lastfm/: client.py  signing.py
backend/src/tidalwave/models/: db.py  domain.py
backend/src/tidalwave/routes/: auth.py  share.py  stats.py
backend/src/tidalwave/stats/: queries.py
backend/tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_smoke.py
backend/tests/auth/: test_registration.py  test_service.py  test_session.py
backend/tests/fixtures/: recent_tracks_page1.json
backend/tests/ingest/: test_backfill.py  test_durations.py  test_ingest_now.py  test_poller.py  test_repository.py  test_service.py
backend/tests/lastfm/: test_client_recent.py  test_client_session.py  test_signing.py
backend/tests/models/: test_db_models.py
backend/tests/routes/: test_auth_routes.py  test_health.py  test_share_routes.py  test_stats_routes.py
backend/tests/stats/: test_queries.py
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
(+75 files in other folders)
